; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_get_value.c_menu_action_setting_disp_set_label_configurations.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_get_value.c_menu_action_setting_disp_set_label_configurations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RARCH_PATH_CONFIG = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_DIRECTORY_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i8*, i8*, i64, i8*, i8*, i64)* @menu_action_setting_disp_set_label_configurations to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @menu_action_setting_disp_set_label_configurations(i32* %0, i32* %1, i32 %2, i32 %3, i8* %4, i8* %5, i64 %6, i8* %7, i8* %8, i64 %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i8*, align 8
  %20 = alloca i64, align 8
  store i32* %0, i32** %11, align 8
  store i32* %1, i32** %12, align 8
  store i32 %2, i32* %13, align 4
  store i32 %3, i32* %14, align 4
  store i8* %4, i8** %15, align 8
  store i8* %5, i8** %16, align 8
  store i64 %6, i64* %17, align 8
  store i8* %7, i8** %18, align 8
  store i8* %8, i8** %19, align 8
  store i64 %9, i64* %20, align 8
  %21 = load i32*, i32** %12, align 8
  store i32 19, i32* %21, align 4
  %22 = load i8*, i8** %19, align 8
  %23 = load i8*, i8** %18, align 8
  %24 = load i64, i64* %20, align 8
  %25 = call i32 @strlcpy(i8* %22, i8* %23, i64 %24)
  %26 = load i32, i32* @RARCH_PATH_CONFIG, align 4
  %27 = call i32 @path_is_empty(i32 %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %35, label %29

29:                                               ; preds = %10
  %30 = load i8*, i8** %16, align 8
  %31 = load i32, i32* @RARCH_PATH_CONFIG, align 4
  %32 = call i32 @path_get(i32 %31)
  %33 = load i64, i64* %17, align 8
  %34 = call i32 @fill_pathname_base(i8* %30, i32 %32, i64 %33)
  br label %41

35:                                               ; preds = %10
  %36 = load i8*, i8** %16, align 8
  %37 = load i32, i32* @MENU_ENUM_LABEL_VALUE_DIRECTORY_DEFAULT, align 4
  %38 = call i8* @msg_hash_to_str(i32 %37)
  %39 = load i64, i64* %17, align 8
  %40 = call i32 @strlcpy(i8* %36, i8* %38, i64 %39)
  br label %41

41:                                               ; preds = %35, %29
  ret void
}

declare dso_local i32 @strlcpy(i8*, i8*, i64) #1

declare dso_local i32 @path_is_empty(i32) #1

declare dso_local i32 @fill_pathname_base(i8*, i32, i64) #1

declare dso_local i32 @path_get(i32) #1

declare dso_local i8* @msg_hash_to_str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
